<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baabbaba"
    >

    <LinearLayout
        android:layout_marginLeft="@dimen/marignleft"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/paddingleft"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:textSize="@dimen/textsize"
            android:paddingTop="@dimen/paddingtop"
            android:layout_marginLeft="@dimen/marignlefttextview"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middlename"
            android:textSize="@dimen/textsize"
            android:paddingTop="@dimen/paddingtop"
            android:layout_marginLeft="@dimen/marignlefttextview"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:textSize="@dimen/textsize"
            android:paddingTop="@dimen/paddingtop"
            android:layout_marginLeft="@dimen/marignlefttextview"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Address"
            android:textSize="@dimen/textsize"
            android:paddingTop="@dimen/paddingtop"
            android:layout_marginLeft="@dimen/marignlefttextview"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textSize="@dimen/textsize"
            android:paddingTop="@dimen/paddingtop"
            android:layout_marginLeft="@dimen/marignlefttextview"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phone"
            android:textSize="@dimen/textsize"
            android:paddingTop="@dimen/paddingtop"
            android:layout_marginLeft="@dimen/marignlefttextview"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/City"
            android:textSize="@dimen/textsize"
            android:paddingTop="@dimen/paddingtop"
            android:layout_marginLeft="@dimen/marignlefttextview"
            />
    </LinearLayout>
</LinearLayout>